feat: EFFECTS-PITCH-001 complete - pitch GIFs exported
Fixed YAML schema issues (added id, version, actors, edge IDs)

Exported GIFs for Feb 10 CTO pitch:
- demo-pitch-pain.gif (249KB) - Translation layer problem
- demo-pitch-solution.gif (232KB) - Event-driven solution
- demo-pitch-roadmap.gif (389KB) - 12-week pilot timeline

Ready for deck insertion!

--- a/stories/pitch/event-driven-solution.yaml
+++ b/stories/pitch/event-driven-solution.yaml
@@ -1,8 +1,12 @@
 # Event-Driven Solution - Executive Pitch
 # Shows the elegant decoupled architecture
 
+id: event-driven-solution
 title: "Event-Driven Architecture"
 description: "Bounded Contexts communicating through events"
+version: "1.0"
+
+actors: []
 
 nodes:
   # Bounded Contexts
