--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@dagrejs/dagre": "^2.0.3",
     "@xyflow/react": "^12.10.0",
+    "elkjs": "^0.11.0",
     "gif.js": "^0.2.0",
     "html-to-image": "^1.11.13",
     "jspdf": "^4.1.0",
